--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           KEY: ${{ secrets.SSHKEY }}
         with:
           source: "."
-          target: "christel.cumkwatt.fr"
+          target: "phil.cumkwatt.fr/home/christel/public_html"
 
       - name: Executing remote command
         uses: appleboy/ssh-action@master
